<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/nav_payment_detail"
        android:title="@string/payment_detail"
        android:icon="@drawable/ic_baseline_payment_detail_24"
        />
    <item
        android:id="@+id/nav_create_id"
        android:title="@string/create_id"
        android:icon="@drawable/ic_baseline_create_id_24"/>
    <item
        android:id="@+id/nav_my_id"
        android:title="@string/my_id"
        android:icon="@drawable/ic_baseline_my_id_24"/>
    <item
        android:id="@+id/nav_deposite"
        android:title="@string/deposit"
        android:icon="@drawable/deposit"/>
    <item
        android:id="@+id/nav_withdraw"
        android:title="@string/withdrawal"
        android:icon="@drawable/withdraw"/>
    <item
        android:id="@+id/nav_tran_history"
        android:title="@string/tran_history"
        android:icon="@drawable/ic_baseline_passbook_24"/>
    <item
        android:id="@+id/nav_refer_earn"
        android:title="@string/refer_earn"
        android:icon="@drawable/ic_baseline_refer_earn_24"/>
    <item
        android:id="@+id/nav_noti"
        android:title="@string/notifiction"
        android:icon="@drawable/ic_baseline_notifications_24"/>
    <item
        android:id="@+id/nav_help"
        android:title="@string/help"
        android:icon="@drawable/ic_baseline_live_help_24"/>
    <item
        android:id="@+id/nav_term_condition"
        android:title="@string/term_condtinon_"
        android:icon="@drawable/ic_baseline_security_24"/>
    <item
        android:id="@+id/nav_sign_out"
        android:title="@string/sign_out"
        android:icon="@drawable/ic_baseline_logout_24"/>

</menu>