<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/app_theme_color"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            style="@style/TextAppearence.App.TextInputLayout"
            >

            <EditText
                android:id="@+id/edt_contact"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:drawableRight="@drawable/ic_baseline_local_phone_24"
                android:hint="@string/phone_no_"
                android:inputType="number"
                android:enabled="false"
                />




        </com.google.android.material.textfield.TextInputLayout>






        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            style="@style/TextAppearence.App.TextInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <EditText
                android:id="@+id/edt_password"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"

                android:hint="@string/password_"
                android:inputType="textPassword"

                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            style="@style/TextAppearence.App.TextInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <EditText
                android:id="@+id/edt_cnf_password"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/cnf_password_"
                android:inputType="textPassword"
                />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_change_password"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/sign_up"
            android:textAllCaps="false"


            />
        <!--        tools:toastMessage="@{viewModel.toastMessage}"-->


    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/red"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />





</androidx.constraintlayout.widget.ConstraintLayout>
</layout>